--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -52,11 +52,7 @@ File: Main Css File
 @import "custom/pages/profile";
 @import "custom/pages/taskboard";
 @import "custom/pages/ecommerce";
-@import "custom/pages/category";
-@import "custom/pages/subcategory";
-@import "custom/pages/service";
-@import "custom/pages/service-type";
-@import "custom/pages/product";
+@import "custom/pages/course";
 @import "custom/pages/user";
 
 // Vendors
