--- a/src/assets/scss/custom/pages/_course.scss
+++ b/src/assets/scss/custom/pages/_course.scss
@@ -1,11 +1,14 @@
-.product {
+.course {
   .card {
     padding: 10px;
   }
+  .course--info {
+    font-size: 16px;
+  }
   label {
     padding: 5px 0;
-    margin: 0;
-    font-size: 18px;
+    margin: 0 10px;
+    font-size: 12px;
   }
   h4 {
     padding-top: 25px;
@@ -22,8 +25,8 @@
     padding: 8px;
   }
   a {
-    margin: 10px;
-    color: #555;
+    margin: 20px;
+    color: #fff;
   }
   .btn {
     margin: 0 10px;
@@ -32,5 +35,11 @@
   img {
     width: 250px;
     margin: 20px;
+  }
+}
+
+.modal {
+  .submit {
+    text-align: right;
   }
 }
