--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -54,6 +54,7 @@ File: Main Css File
 @import "custom/pages/ecommerce";
 @import "custom/pages/course";
 @import "custom/pages/user";
+@import "custom/pages/sale";
 
 // Vendors
 @import "vendor/metisMenu";
